--- a/display.html
+++ b/display.html
@@ -1,112 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Padrão Mostrado</title>
+  <meta charset="UTF-8">
+  <title>Visualizar Senhas</title>
   <style>
     body {
-      margin: 0;
-      background: #333;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    #pattern-container {
-      width: 300px;
-      height: 300px;
-      background: white;
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: 30px;
-      padding: 30px;
-      border-radius: 10px;
-      position: relative;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-    .dot {
-      width: 20px;
-      height: 20px;
-      background: black;
-      border-radius: 50%;
-      margin: auto;
-      z-index: 2;
-    }
-    .dot.active {
-      background: #0af;
+      background-color: #111;
+      color: white;
+      font-family: sans-serif;
+      text-align: center;
     }
     canvas {
-      position: absolute;
-      top: 0; left: 0;
-      z-index: 1;
+      margin: 10px;
+      background-color: #222;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
+  <h1>Senhas recebidas</h1>
+  <div id="output"></div>
 
-<div id="pattern-container">
-  <canvas id="pattern-canvas" width="300" height="300"></canvas>
-  <div class="dot" data-id="1"></div>
-  <div class="dot" data-id="2"></div>
-  <div class="dot" data-id="3"></div>
-  <div class="dot" data-id="4"></div>
-  <div class="dot" data-id="5"></div>
-  <div class="dot" data-id="6"></div>
-  <div class="dot" data-id="7"></div>
-  <div class="dot" data-id="8"></div>
-  <div class="dot" data-id="9"></div>
-</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-<script>
-  const canvas = document.getElementById("pattern-canvas");
-  const ctx = canvas.getContext("2d");
-  const dots = Array.from(document.querySelectorAll(".dot"));
+    const firebaseConfig = {
+      apiKey: "AIzaSyCUhYt0az_F_ATHcOdSoLi-Ks520Zxjzbs",
+      authDomain: "senha-padroes.firebaseapp.com",
+      projectId: "senha-padroes",
+      storageBucket: "senha-padroes.firebasestorage.app",
+      messagingSenderId: "387208237733",
+      appId: "1:387208237733:web:22018c4eb89a872367334c",
+      measurementId: "G-L57HTKV23H"
+    };
 
-  // Posições fixas das bolinhas no grid para o canvas desenhar
-  const dotPositions = {
-    "1": {x: 30, y: 30},
-    "2": {x: 150, y: 30},
-    "3": {x: 270, y: 30},
-    "4": {x: 30, y: 150},
-    "5": {x: 150, y: 150},
-    "6": {x: 270, y: 150},
-    "7": {x: 30, y: 270},
-    "8": {x: 150, y: 270},
-    "9": {x: 270, y: 270},
-  };
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-  function drawPattern(patternIds) {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-    ctx.strokeStyle = "#0af";
-    ctx.lineWidth = 4;
-    ctx.beginPath();
+    const output = document.getElementById("output");
 
-    patternIds.forEach((id, index) => {
-      const dot = dots.find(d => d.dataset.id === id);
-      if (dot) {
-        dot.classList.add("active");
-        const pos = dotPositions[id];
-        if (index === 0) ctx.moveTo(pos.x, pos.y);
-        else ctx.lineTo(pos.x, pos.y);
+    const snapshot = await getDocs(query(collection(db, "padroes"), orderBy("timestamp", "desc")));
+
+    snapshot.forEach(doc => {
+      const data = doc.data();
+      const padrao = data.padrao;
+
+      const canvas = document.createElement("canvas");
+      canvas.width = 300;
+      canvas.height = 300;
+      const ctx = canvas.getContext("2d");
+
+      const grid = 3;
+      const spacing = 100;
+      const offset = 50;
+
+      const positions = [];
+      for (let y = 0; y < grid; y++) {
+        for (let x = 0; x < grid; x++) {
+          positions.push([x * spacing + offset, y * spacing + offset]);
+        }
       }
+
+      ctx.strokeStyle = "#4fc3f7";
+      ctx.lineWidth = 5;
+
+      for (let i = 0; i < padrao.length; i++) {
+        const pos = positions[padrao[i] - 1];
+        ctx.beginPath();
+        ctx.arc(pos[0], pos[1], 10, 0, 2 * Math.PI);
+        ctx.fillStyle = "white";
+        ctx.fill();
+
+        if (i > 0) {
+          const prev = positions[padrao[i - 1] - 1];
+          ctx.beginPath();
+          ctx.moveTo(prev[0], prev[1]);
+          ctx.lineTo(pos[0], pos[1]);
+          ctx.stroke();
+        }
+      }
+
+      output.appendChild(canvas);
     });
-
-    ctx.stroke();
-  }
-
-  function getPatternFromURL() {
-    const params = new URLSearchParams(window.location.search);
-    const padrao = params.get("padrao");
-    if (padrao) {
-      const ids = padrao.split("-");
-      drawPattern(ids);
-    }
-  }
-
-  window.onload = getPatternFromURL;
-</script>
-
+  </script>
 </body>
 </html>
 
